Changes in Version 0.4-3

    o    Add new argument 'fitargs' to 'tvcm'. Allows to pass arguments for
         the fitting function in 'tvcm' and 'fvcm'. This was possible before
         via the '...', but leads to argument name clashes in some cases. See
         the help of 'tvcm'.

    o    Improve the help of 'vcpart-formula'.

    o    fixed an unnecessary error case in 'tvcm_folds'.

Changes in Version 0.4-2

    o    Update of citation info

    o    modified 'olmm_control' for the 'optim' optimizier. Now
         'BFGS' is set as the default and a warning is shown
         if a non-gradient based method is chosen while 'numGrad = FALSE'.

    o    Enable option 'sparse' for function 'contr.wsum'.

    o    Improved C-code for olmm. Does not have impacts for users. Please
         report if any changes appear.

Changes in Version 0.4-1

    o    Changed titles in 'panel_coef', 'tvcm.print' and 'tvcm.summary'

    o    Add '...' to the 'VarCorr' method for 'olmm' objects to resolve
         the warning since 'nlme' version 3.1-123. Removed 'rdig' argument.

    o    Because of an internal bug the print method for 'fvcm' objects
         printed always 'Bagging based varying coefficient model', even if
	 'mtry < Inf'. Bug fixed. Thanks Michel Ballings for the hint.

    o    In cases of 'mtry = Inf' the algorithm returned an error. Now
         'mtry = Inf' is allowed.

    o    In cases of 'mtry < Inf' the 'print.fvcm' shows now the set 'mtry'
         parameter.

    o    Improved the 'coef' method for models fitted with 'tvcm', 'tvcglm'
         or 'tvcolmm'. 'by' variables of 'vc' terms without splits are not
         anymore assigned to fixed i.e. main effects. 

    o    Corrected internal bug of 'predict.fvcm'. Except for 'type = "coef"',
         and models with 'family = gaussian()' or 'family = cumulative()',
         predictions gave wrong results. Sorry.

    o    The default setting for 'na.action' on 'tvcolmm', 'tvcglm', 'tvcm'